--- a/novo_bd1971_robusto/site/templates/base.html
+++ b/novo_bd1971_robusto/site/templates/base.html
@@ -8,6 +8,9 @@
     <!-- CSS Principal -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 
+    <!-- JS Principal -->
+    <script src="{{ url_for('static', filename='js/main.js') }}"></script>
+
     <!-- Chart.js para gráficos -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
 
